--- a/login/index.html
+++ b/login/index.html
@@ -48,6 +48,6 @@
               
         </section>
     </div>
-      <script type="module" src="/booking/main.js" ></script>
+      <script type="module" src="/login/main.js" ></script>
 </body>
 </html>
