--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
               <ul class="d-flex navbar-nav ms-auto mb-2 mb-lg-0">
    
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Log In</a>
+                  <a class="nav-link" href="#">Update-Account</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Log Out</a>
+                  <a class="nav-link disabled" href="#">Log-In</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Log-Out</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
